fix(search): refine categorized search matching